Replaced the calculation/correlation framework.
- Removed the optimization completely, it didn't work great and it
  should be simple to recreated when needed.
- Replaced the dataset JSON data store with a Badger database.
- Replaced the "load from remote datasets on demand but store it locally
  when preferred" with a "always download locally for processing"
  approach.
- Made local datasets always use compressed formats - either the same
  bytestream as remote, or (if WAV) FLAC.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
+    if: '! github.event.pull_request.draft'
+
     steps:
     - name: Install dependencies
       run: sudo apt install -y libogg-dev libvorbis-dev libflac-dev cmake ninja-build libasound2-dev libglfw3-dev libopus-dev
