Added more datasets and metrics to the analysis.
- Added missing includes.
- Added more garbage to .gitignore.
- Added more doc comments.
- Fixed many small bugs.
- Fixed wording in various places.
- Made the calculation tool optionally able to skip calculating
  already-existing metrics.
- Added leaderboard flag to the analysis tool that shows top list of
  metrics.
- Made the table output be Markdown-compatible.
- Added an optional error handler to the worker pool.
- Added many more external metrics.
- Added ingestion tool for more datasets.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ asan_build
 .vscode
 python/__pycache__/**
 **/METADATA
+# Some files produced by one of the external metrics.
+pesq_results.txt
+analized
+Testing/*
