Cleaned up Python and Go bindings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,17 +24,18 @@ target_include_directories(zimtohrli_visqol_adapter PUBLIC cpp)
 target_link_libraries(zimtohrli_visqol_adapter PRIVATE visqol samplerate)
 target_link_libraries(zimtohrli_visqol_adapter PUBLIC absl::span)
 
-#find_package(Python3 COMPONENTS Interpreter Development)
-#add_library(zimtohrli_pyohrli SHARED
-#    cpp/zimt/zimtohrli.h
-#    cpp/zimt/pyohrli.cc
-#)
-#set_target_properties(zimtohrli_pyohrli PROPERTIES
-#    PREFIX ""
-#    OUTPUT_NAME _pyohrli.so
-#    SUFFIX ""
-#)
-#target_link_libraries(zimtohrli_pyohrli Python3::Python absl::check)
+find_package(Python3 COMPONENTS Interpreter Development)
+add_library(zimtohrli_pyohrli SHARED
+   cpp/zimt/zimtohrli.h
+   cpp/zimt/pyohrli.cc
+)
+target_include_directories(zimtohrli_pyohrli PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/cpp)
+set_target_properties(zimtohrli_pyohrli PROPERTIES
+   PREFIX ""
+   OUTPUT_NAME _pyohrli.so
+   SUFFIX ""
+)
+target_link_libraries(zimtohrli_pyohrli Python3::Python absl::check)
 
 add_library(zimtohrli_goohrli_glue STATIC
     cpp/zimt/goohrli.cc
